fix alignement en y lorsque l'image ne fait pas la meme hauteur que les autres taille

--- a/assets/sass/_theme/blocks/key_figures.sass
+++ b/assets/sass/_theme/blocks/key_figures.sass
@@ -13,6 +13,10 @@
     .top:not(.hidden) + ul
         margin-top: $spacing-4
     dl
+        display: flex
+        flex-direction: column
+        height: 100%
+        justify-content: flex-end
         margin-bottom: 0
         margin-top: 0
         dt
